--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   geolocator: ^9.0.2
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
